--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -13,11 +13,16 @@
         android:textSize="22dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <ListView
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_refresh"
         android:layout_below="@id/name"
-        android:id="@+id/friend_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </ListView>
-
+        <ListView
+            android:id="@+id/friend_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
