--- a/app/src/main/res/layout/toast_view.xml
+++ b/app/src/main/res/layout/toast_view.xml
@@ -37,7 +37,7 @@
 
         <TextView
             android:id="@+id/tvTextToast"
-            android:layout_width="wrap_content"
+            android:layout_width="128dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingLeft="10dip"
